# loan-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: ruff
src/demo/demo/: settings.py  urls.py
tests/: test_manage.py
