[project]
name = "loan-demo"
version = "0.1.0"
description = "The Loan Demo project"
authors = [
    {name = "Aliaksei Urbanski", email = "aliaksei.urbanski@gmail.com"},
]
dependencies = [
    "Django>=5.0,<5.1",
    "djangorestframework>=3.15.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
