[project]
name = "loan-demo"
version = "0.1.0"
description = "The Loan Demo project"
authors = [
    {name = "Aliaksei Urbanski", email = "aliaksei.urbanski@gmail.com"},
]
dependencies = [
    "Django>=5.0,<5.1",
    "djangorestframework>=3.15.2",
    "psycopg>=3.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-env",
    "factory-boy",
]

[tool.pdm.scripts]
lint-ruff = "scripts/ruff"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
known-local-folder = ["demo"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "demo.settings"
pythonpath = ". src"
addopts = "--cov src"

[tool.pytest_env]
ENV_NAME = "test"
SECRET_KEY = "test"
POSTGRES_DB = "test"
POSTGRES_USER = "test"
POSTGRES_PASSWORD = "test"

[tool.coverage.run]
branch = true
